--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   },
   "author": "Jon Ashcroft",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "babelify": "^8.0.0",
-    "browser-sync": "^2.23.7",
-    "browserify": "^16.2.0",
+    "browser-sync": "^2.24.6",
+    "browserify": "^16.2.2",
     "browsersync": "0.0.1-security",
-    "eslint": "^4.19.1",
+    "eslint": "^5.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -20,11 +24,15 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^3.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "babelify": "^8.0.0"
   }
 }
